# Last-Mile-Routing-Analyzer

./: .gitattributes  .gitignore  .pylintrc  CITATION.cff  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_tests.txt  route_score.csv  route_score.json  setup.py
.github/: CODEOWNERS  auto-assign.yml  pull_request_template.md
.github/workflows/: auto-assign-projects  auto-assign-projects.yml  pytest.yml  test_pytest.yaml
data/driving_distances/: README.md  austin.csv  guarulhos.csv
data/shapefiles/austin/: austin.dbf  austin.shx
data/shapefiles/boston/: boston.dbf
data/shapefiles/chicago/: chicago.dbf
docs/misc/: fetch_osm_dd.py  geopandas_example.ipynb
gmaps/: distances.py  distances_calculator.ipynb
lmr_analyzer/: __init__.py  amz_serializer.py  analysis.py  bbox.py  distance_matrix.py  enums.py  geometry.py  package.py  route.py  stop.py  utilities.py  utils.py  vehicle.py
lmr_analyzer/plots/: __init__.py  plots_geometry.py
notebooks/gmaps/: distances.py  distances_matrix_input.xlsx  gmaps_api_example.ipynb
notebooks/lmr_analyzer/: geometry_class_example.ipynb  guarulhos_case_example.ipynb  lmr_analyzer_example.ipynb
notebooks/osmnx/: single_neigh_example.ipynb
osm/: Examples OSMnx Julia.ipynb  cumbica_neigh_example.ipynb  guarulhos_streets_orientation.ipynb
source/: amz_serializer.py  analysis.py  geometry.py  package.py  stop.py  utils.py
tests/: conftest.py  conftests.py  test_bbox.py  test_distance_matrix.py  test_package.py  test_stop.py  test_utils.py  test_vehicle.py
(+79 files in other folders)
