[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lmr_analyzer"
authors = [{name = "Guilherme Fernandes Alves", email = "gf10.alves@gmail.com"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
keywords = [
    "python",
    "routing",
    "spatial",
    "urban-planning",
    "networkx",
    "vehicle-routing-problem",
    "network-analysis",
    "logistics",
    "street-networks",
    "osmnx",
    "last-mile",
]
dependencies = [
    "cloudpickle>=2.2.0",
    "ipython>=8.8.0",
    "matplotlib>=3.6.2",
    "networkx>=2.8.8",
    "numpy>=1.24.1",
    "osmnx>=1.3.0",
    "pandas>=1.5.2",
    "pytz>=2022.7",
    "requests>=2.28.1",
    "scipy>=1.10.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.2.0",
    "pytest-coverage",
    "black>=22.12.0",
]
notebooks = [
    "boto3>=1.26.154",
    "ipywidgets>=7.6.5",
    "notebook>=6.4.6",
]

[project.urls]
Home = "https://github.com/Gui-FernandesBR/Last-Mile-Routing-Analyzer"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py310']
